# fcs-api

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
fcs/: application.py  config.py  containers.py  endpoints.py  models.py  repository.py  service.py
tests/: test_model.py
tests/integration/: conftest.py  test_repository.py
